# sp1-svm-template

./: Cargo.toml  README.md
elf/: riscv32im-succinct-zkvm-elf
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: entrypoint.rs  errors.rs  instruction.rs  lib.rs  main.rs  processor.rs  validation_utils.rs
script/: Cargo.toml
