[package]
name = "stateless-asks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-sbf = []
digest = ['dep:blake3']

[dependencies]
borsh = "1.5.1"
solana-program = "2.1.0"
solana-pubkey = "2.1.0"
spl-token = { version = "7.0.0", features = [
  "no-entrypoint",
] }
stateless-asks = "0.1.0"
blake3 = { version = "^1.5.*", optional = true, features = ["std"] }
spl-associated-token-account = "6.0.0"
subtle = { version = "2.4.1", default-features = false }
thiserror = "1.0"
sol_lib = { path = "../lib" }
sp1-zkvm = "3.1.0"
getrandom = { version = "<=0.2.15", features = ["dummy"] }
mpl-token-metadata = "5.1.0"

[dev-dependencies]
solana-sdk = "^2.1.0"
curve25519-dalek = "4.1.3"
spl-type-length-value = "0.7.0"
spl-program-error = "0.6.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

