[package]
version = "0.1.0"
name = "zk-offers-script"
edition = "2021"
default-run = "zk-offers"

[[bin]]
name = "zk-offers"
path = "src/bin/main.rs"

[[bin]]
name = "spl"
path = "src/bin/spl.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[features]
digest = ['dep:blake3']

[dependencies]
borsh = "1.5.1"
base64 =  "0.22.1"
sp1-sdk = "1.1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
solana-zk-offers = { path = "../lib" }
blake3 = { version = "^1.5.*", optional = true, features = ["std"] }
subtle = "^2.5.*"
solana-program = "2.1.0"
spl-token = { version = "7.0.0", features = [
  "no-entrypoint",
] }
solana-transaction = "=0.0.2"
solana-message = "=0.0.3"
solana-instruction = "=0.0.3"
solana-pubkey = "=0.0.2"

[build-dependencies]
sp1-helper = "1.1.0"
